<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".doszhan_log_in_page"

    >


    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button6">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/asdasdasdasdasd"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/the_cooking_process" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/let_s_start_making_making_good_meals"
            android:textAlignment="center"
            android:textColor="#D7A63C"
            android:textSize="32sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:autofillHints=""
            android:backgroundTint="#D7A63C"
            android:ems="10"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:shadowColor="#D7A63C"
            android:textColor="#000000"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#D7A63C"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/button3"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F0DDB6"
            android:text="@string/create_account"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:minHeight="48dp"
            android:text="@string/i_agree_with_terms_of_privacy"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>