<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="UnknownIdInLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/asdasdasdasdasd"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/_303623835_h_1024x700" />

        <TextView
            android:id="@+id/textView4"
            tools:ignore="TextContrastCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/we_are_glad_to_see_you_again"
            android:textAlignment="center"
            android:textColor="#D7A63C"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:autofillHints=""
            android:backgroundTint="#D7A63C"
            android:ems="10"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:shadowColor="#D7A63C"
            android:textColor="#000000"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#D7A63C"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/button3"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F0DDB6"
            android:text="Log In"
            android:textColor="@color/black"
            tools:ignore="HardcodedText" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:minHeight="48dp"
            android:text="@string/remember_me"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>